--- a/styles/style.css
+++ b/styles/style.css
@@ -7,19 +7,95 @@
   margin: 0 auto;
   /* this ensures that all content is centered on screens wider than 1600px */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  padding: 0 auto;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: black 3px solid;
   /* parameters for the header section */
+}
+
+.header__logo {
+  height: 31px;
+  width: 154px;
+  margin-left: 64px;
+  position: absolute;
+  top: 30px;
+  z-index: 2;
+  border: black 3px solid;
+}
+
+.logo_place_header {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.header__title {
+  margin-left: 64px;
+  width: 730px;
+  z-index: 2;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  border: black 3px solid;
+}
+
+.header__subtitle {
+  width: 388px;
+  margin-left: 64px;
+  position: absolute;
+  bottom: 30px;
+  z-index: 2;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  border: black 3px solid;
+}
+
+.link {
+  
+}
+
+.header__link {
+
+}
+
+.header__main-illustration {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+  background-size: contain;
+  border: black 3px solid;
+}
+
+.header__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  z-index: 0;
+  position: absolute;
+  top: 64px;
+  right: 0px;
+  border: black 3px solid;
+  
 }
 
 /* including elements with key-value modifiers */
