--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
   /* this ensures that all content is centered on screens wider than 1600px */
   font-family: 'Helvetica Neue', Arial, sans-serif;
   padding: 0 auto;
+  border: 2px black solid;
 }
 
 .header {
@@ -18,21 +19,23 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: black 3px solid;
+  border: 2px black solid;
   /* parameters for the header section */
 }
 
-.header__logo {
+.logo {
   height: 31px;
   width: 154px;
-  margin-left: 64px;
-  position: absolute;
-  top: 30px;
-  z-index: 2;
-  border: black 3px solid;
 }
 
 .logo_place_header {
+  margin-left: 64px;
+  position: absolute;
+  top: 30px;
+  z-index: 3;
+}
+
+.cover-block {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -45,7 +48,6 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
-  border: black 3px solid;
 }
 
 .header__subtitle {
@@ -53,11 +55,10 @@
   margin-left: 64px;
   position: absolute;
   bottom: 30px;
-  z-index: 2;
+  z-index: 3;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  border: black 3px solid;
 }
 
 .link {
@@ -76,13 +77,6 @@
   height: 608px;
   z-index: 1;
   background-size: contain;
-  border: black 3px solid;
-}
-
-.header__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
@@ -94,9 +88,77 @@
   position: absolute;
   top: 64px;
   right: 0px;
-  border: black 3px solid;
   
 }
+
+.content {
+  margin-top: 100px;
+  border: 2px black solid;
+}
+
+.description {
+  border: 2px black solid;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: flex;
+}
+
+.two-columns {
+  margin: auto;
+  width: 80%;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.two-columns__brief {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.two-columns__link {
+ 
+}
+
+.two-columns__main-text {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 80%;
+  min-width: 784px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: stretch;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.two-columns__paragraph {
+  
+}
+
+.two-columns__paragraph_place_top {
+  margin: auto;
+}
+
+.two-columns__paragraph_place_middle {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.two-columns__paragraph_place_bottom {
+  margin: auto;
+}
+
 
 /* including elements with key-value modifiers */
 .table__cell_theme_dark {
