--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@
 }
 
 .link {
-  
+  text-decoration-line: none;
 }
 
 .header__link {
@@ -88,7 +88,6 @@
   position: absolute;
   top: 64px;
   right: 0px;
-  
 }
 
 .content {
@@ -100,7 +99,6 @@
   border: 2px black solid;
   margin-top: 100px;
   margin-bottom: 100px;
-  display: flex;
 }
 
 .two-columns {
@@ -159,11 +157,150 @@
   margin: auto;
 }
 
+.digits {
+  border: 2px black solid;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  /*height: 100%;
+  width: 100%;
+  display: flex;*/
+  
+}
+
+.section-title {
+  border: 2px black solid;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;;
+  width: 60%;
+  margin: auto;
+}
+
+.section-subtitle {
+  border: 2px black solid;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  width: 60%;
+  margin: 20px auto 0px auto;
+}
+
+.table {
+  border: 2px black solid;
+  width: 1100px;
+  height: auto;
+  margin: 0px auto;
+  display: flex;
+  /*border-collapse: seperate; 
+  border-spacing: 60px 33px
+  flex-direction: row;
+  justify-content: space-between;
+  border-collapse: collapse;
+  object-fit: contain; 
+  padding: 0px;
+  display: block; */
+}
+
+.table__cell {
+  /*border-collapse: seperate; 
+  border-spacing: 0px 20px ;
+  object-fit: contain;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  display: inline-block;*/
+  
+  margin: 60px auto 0 auto;
+}
+
+.table__cell_theme_light {
+  border: 2px black solid;
+  width: 250px;
+  color: black;
+ /* margin: 0;
+  padding: 0px;
+  border-collapse:collapse; 
+  border-spacing: ;*/
+}
+
+.table__heading {
+  border: 2px black solid;
+  line-height: 1.15; 
+  font-size: 24px;
+  font-weight: bold;
+  text-align: left;
+  /*margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: auto;*/
+}  
+
+
+.table__text {
+  border: 2px black solid;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: left;
+  /*margin: 20px 0px 0px 0px;
+  width: 100%;
+  height: auto;*/
+}
+
+.feynman {
+  border: 2px black solid;
+  position: relative;
+  height: 790px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+}
+
+.feynman__title {
+  margin: 100px auto 70px auto;
+  width: 775px;
+  text-align: center;
+  z-index: 1;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  z-index: 1;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  z-index: 1;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__image {
+  height: 637px;
+  width: 867px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 0;
+}
+
 
 /* including elements with key-value modifiers */
-.table__cell_theme_dark {
+/*table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-}
+}*/
