--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,13 @@
 .page {
   min-width: 1100px;
-  /* we don't know how to make mobile versions of websites yet, */
-  /* so here we've set a minimum page width */
   max-width: 1600px;
-  /* here we've set a maximum page width */
   margin: 0 auto;
-  /* this ensures that all content is centered on screens wider than 1600px */
   font-family: 'Helvetica Neue', Arial, sans-serif;
   padding: 0 auto;
   border: 2px black solid;
 }
 
+/*block-1-----------------------------------------------------------------------------*/
 .header {
   height: 100vh;
   min-height: 600px;
@@ -19,9 +16,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 2px black solid;
-  /* parameters for the header section */
+  border: 1px black solid;
 }
+
 
 .logo {
   height: 31px;
@@ -65,10 +62,6 @@
   text-decoration-line: none;
 }
 
-.header__link {
-
-}
-
 .header__main-illustration {
   position: absolute;
   right: 0px;
@@ -79,7 +72,6 @@
   background-size: contain;
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -92,11 +84,12 @@
 
 .content {
   margin-top: 100px;
-  border: 2px black solid;
+  border: 1px black solid;
 }
 
+/*block-2-------------------------------------------------------------------------------*/
 .description {
-  border: 2px black solid;
+  border: 1px black solid;
   margin-top: 100px;
   margin-bottom: 100px;
 }
@@ -104,6 +97,7 @@
 .two-columns {
   margin: auto;
   width: 80%;
+  display: flex;
   justify-content: space-between;
   height: 100%;
 }
@@ -115,10 +109,6 @@
   width: 175px;
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-.two-columns__link {
- 
 }
 
 .two-columns__main-text {
@@ -135,16 +125,7 @@
 }
 
 .two-columns__paragraph {
-  
-}
-
-.two-columns__paragraph_place_top {
   margin: auto;
-}
-
-.two-columns__paragraph_place_middle {
-  margin-top: 30px;
-  margin-bottom: 30px;
 }
 
 .two-columns__span-accent {
@@ -153,32 +134,31 @@
   font-weight: bold;
 }
 
-.two-columns__paragraph_place_bottom {
-  margin: auto;
+.two-columns__paragraph_place_middle {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
+/*block-3-------------------------------------------------------------------------*/
 .digits {
-  border: 2px black solid;
+  border: 1px black solid;
   margin-top: 100px;
   margin-bottom: 100px;
-  /*height: 100%;
-  width: 100%;
-  display: flex;*/
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section-title {
-  border: 2px black solid;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  text-align: center;;
+  text-align: center;
   width: 60%;
   margin: auto;
 }
 
 .section-subtitle {
-  border: 2px black solid;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -188,69 +168,45 @@
 }
 
 .table {
-  border: 2px black solid;
   width: 1100px;
-  height: auto;
-  margin: 0px auto;
   display: flex;
-  /*border-collapse: seperate; 
-  border-spacing: 60px 33px
   flex-direction: row;
+  
+}
+
+.table__row {
+  width: 1100px;
+  margin-top: 60px;
+  display: flex;
   justify-content: space-between;
-  border-collapse: collapse;
-  object-fit: contain; 
-  padding: 0px;
-  display: block; */
 }
 
 .table__cell {
-  /*border-collapse: seperate; 
-  border-spacing: 0px 20px ;
-  object-fit: contain;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
-  display: inline-block;*/
-  
-  margin: 60px auto 0 auto;
-}
-
-.table__cell_theme_light {
-  border: 2px black solid;
+  display: inline-block;
+  flex-direction: column;
   width: 250px;
-  color: black;
- /* margin: 0;
-  padding: 0px;
-  border-collapse:collapse; 
-  border-spacing: ;*/
+  margin: 0px 0px 0px 0px
 }
 
 .table__heading {
-  border: 2px black solid;
   line-height: 1.15; 
   font-size: 24px;
   font-weight: bold;
   text-align: left;
-  /*margin: 0px;
-  padding: 0px;
-  width: 100%;
-  height: auto;*/
+  margin: 0px;
 }  
 
-
 .table__text {
-  border: 2px black solid;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   text-align: left;
-  /*margin: 20px 0px 0px 0px;
-  width: 100%;
-  height: auto;*/
+  margin: 20px 0px auto 0px;
 }
+/*block-4--------------------------------------------------------------------------*/
 
 .feynman {
-  border: 2px black solid;
+  border: 1px black solid;
   position: relative;
   height: 790px;
   background-color: #f2f2f2;
@@ -296,7 +252,7 @@
   z-index: 0;
 }
 
-
+/*block-5---------------------------------------------------------------------------*/
 /* including elements with key-value modifiers */
 /*table__cell_theme_dark {
   width: 200px;
@@ -304,3 +260,96 @@
   margin-right: 0;
   margin-top: 80px;
 }*/
+
+/*block-6----------------------------------------------------------------------------*/
+.footer {
+  border: 1px red solid;
+  min-height: 350px;
+  display: flex;
+  background-color: black;
+  color: white;
+  position: relative;
+}
+
+.footer__columns {
+  border: 2px red solid;
+  margin: 60px auto 40px auto;
+  width: 90%;
+  position: relative;
+}
+
+.footer__column_content_copyright {
+  border: 1px red  solid;
+  flex-direction: column;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.logo_place_footer {
+  border: 1px red  solid;
+  height: 35px;
+  width: 183px;
+}
+
+.footer__author {
+  border: 1px red  solid;
+  padding: 0;
+  margin-top: 18px;
+  line-height: 15px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  bottom: 18px;
+  left: 0px;
+}
+
+.footer__column_content_info {
+  border: 1px red  solid;
+  flex-direction: column;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 66%;
+}
+
+.footer__column-heading {
+  border: 1px red  solid;
+  margin-bottom: 20px;
+  line-height: 45px;
+  font-size: 18px;
+  font-weight: bold;
+  position: absolute;
+  top: 0px;
+}
+
+.footer__column-links {
+  border: 1px red solid;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  
+}
+
+.footer__column_content_social {
+  border: 1px red solid;
+  flex-direction: column;
+  margin-right: 0px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  
+}
+
+.footer__social-icon {
+  border: 1px red solid;
+  height: 16px;
+  width: 16px;
+  position: absolute;
+  right: 0px;
+  left: 0px;
+}
