--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,11 @@
   list-style-type: none;
 }
 
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
 .header__main-illustration {
   position: absolute;
   right: 0px;
