--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@
   position: relative;
 }
 
-
 .logo {
   height: 31px;
   width: 154px;
@@ -112,6 +111,7 @@
   width: 175px;
   margin-top: 0px;
   margin-bottom: 0px;
+  color: #2f80ed;
 }
 
 .two-columns__main-text {
@@ -131,15 +131,15 @@
   margin: auto;
 }
 
+.two-columns__paragraph:nth-child(2) {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
-}
-
-.two-columns__paragraph_place_middle {
-  margin-top: 30px;
-  margin-bottom: 30px;
 }
 
 /*block-3-------------------------------------------------------------------------*/
