--- a/styles/style.css
+++ b/styles/style.css
@@ -156,7 +156,7 @@
   font-size: 60px;
   font-weight: bold;
   text-align: center;
-  width: 60%;
+  max-width: 60%;
   margin: auto;
 }
 
@@ -165,28 +165,26 @@
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  width: 60%;
+  max-width: 60%;
   margin: 20px auto 0px auto;
 }
 
 .table {
-  width: 1100px;
+  margin: 0 auto 0 auto;
+  padding: 0px;
+  max-width: 1100px;
   display: flex;
   flex-direction: row;
-}
-
-.table__row {
-  width: 1100px;
-  margin-top: 60px;
-  display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .table__cell {
-  display: inline-block;
+  display: flex;
   flex-direction: column;
-  width: 250px;
-  margin: 0px 0px 0px 0px
+  max-width: 250px;
+  padding: 0px 0px 0px 0px;
+  margin: 60px 0px 0px 0px;
 }
 
 .table__heading {
@@ -194,7 +192,10 @@
   font-size: 24px;
   font-weight: bold;
   text-align: left;
-  margin: 0px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  width: 250px;
+  list-style-type: none;
 }  
 
 .table__text {
@@ -202,8 +203,17 @@
   font-size: 18px;
   font-weight: normal;
   text-align: left;
-  margin: 20px 0px auto 0px;
+  width: 100%;
+  max-width: 250px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
 }
+
+.table__text:nth-child(2) {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 /*block-4--------------------------------------------------------------------------*/
 
 .feynman {
