--- a/styles/style.css
+++ b/styles/style.css
@@ -266,72 +266,52 @@
 
 /*block-5---------------------------------------------------------------------------*/
 .kaufman {
-  border: 1px black solid;
-  color: white;
-  background-color: black;
+  padding-top: 90px;
+  padding-bottom: 90px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  
+  
+  background-color: black;
   position: relative;
   overflow: hidden;
 }
 
 .section-title_theme_dark {
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-  text-align: center;
-  width: 60%;
-  margin: 90px auto 0px auto;
-  z-index: 1;
+  color: white;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  text-align: center;
-  width: 60%;
-  margin: 20px auto 0px auto;
-  z-index: 1;
+  color: white;
+  z-index: 2;
 }
 
 .table_theme_dark {
-  margin: 0px auto 90px auto;
-  width: 1100px;
-  display: flex;
-  flex-direction: row;
-  z-index: 1;
-}
-
-.table__row_theme_dark {
-  width: 1100px;
-  margin-top: 80px;
-  display: flex;
-  justify-content: space-between;
+  color: white;
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
-  display: inline-block;
-  flex-direction: column;
+  color: white;
   width: 200px;
-  margin: 0px 0px 0px 0px
+  margin: 80px 0px 0px 0px;
+  z-index: 2;
 }
 
 .table__heading_theme_dark {
-  line-height: 1.15; 
-  font-size: 24px;
-  font-weight: bold;
-  text-align: left;
-  margin: 0px;
-}  
-
+  max-width: 200px;
+  width: 100%;
+  color: white;
+  z-index: 2;
+}
+ 
 .table__text_theme_dark {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  text-align: left;
-  margin: 20px 0px auto 0px;
+  max-width: 200px;
+  width: 100%;
+  color: white;
+  z-index: 2;
 }
 
 .kaufman__triangle {
@@ -340,8 +320,10 @@
   position: absolute;
   top: 0px;
   right: -210px;
-  z-index: 0;
+  z-index: 1;
+  background-image: url(../images/kaufman-triangle.svg);
 }
+
 /*block-6----------------------------------------------------------------------------*/
 .footer {
   border: 1px black solid;
