--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  margin: 0 auto;
+  margin: 0px auto 0px auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  padding: 0 auto;
+  padding: 0px;
 }
 
 /*block-1-----------------------------------------------------------------------------*/
@@ -21,24 +21,19 @@
 .logo {
   height: 31px;
   width: 154px;
+  z-index: 2;
 }
 
 .logo_place_header {
   margin-left: 64px;
   position: absolute;
   top: 30px;
-  z-index: 3;
-}
-
-.cover-block {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  z-index: 2;
 }
 
 .header__title {
   margin-left: 64px;
-  width: 730px;
+  max-width: 730px;
   z-index: 2;
   line-height: 96px;
   font-size: 102px;
@@ -46,19 +41,14 @@
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
   margin-left: 64px;
   position: absolute;
   bottom: 30px;
-  z-index: 3;
+  z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-}
-
-.link {
-  text-decoration: none;
-  list-style-type: none;
 }
 
 .header__link {
@@ -70,17 +60,17 @@
   position: absolute;
   right: 0px;
   bottom: 0px;
-  width: 765px;
+  min-width: 765px;
   height: 608px;
-  z-index: 1;
+  z-index: 2;
   background-size: contain;
 }
 
 .header__square-pic {
   height: 568px;
-  width: 568px;
+  min-width: 568px;
   background-color: #2f80ed;
-  z-index: 0;
+  z-index: 1;
   position: absolute;
   top: 64px;
   right: 0px;
@@ -218,14 +208,16 @@
 
 .feynman {
   position: relative;
-  height: 790px;
+  min-height: 790px;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
+  padding-top: 100px;
+
 }
 
 .feynman__title {
-  margin: 100px auto 70px auto;
+  margin: 0px auto 70px auto;
   width: 775px;
   text-align: center;
   z-index: 1;
@@ -266,14 +258,12 @@
 
 /*block-5---------------------------------------------------------------------------*/
 .kaufman {
-  padding-top: 90px;
+  padding: 90px 0px 90px 0px;
   padding-bottom: 90px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  
-  background-color: black;
+  background-color:#1f1f1f;
   position: relative;
   overflow: hidden;
 }
@@ -326,17 +316,18 @@
 
 /*block-6----------------------------------------------------------------------------*/
 .footer {
-  border: 1px black solid;
   min-height: 350px;
-  background-color: black;
+  background-color: #1f1f1f;
   color: white;
   width: 100%;
+  padding: 60px 0px 40px 0px;
+  display: flex;
 }
 
 .footer__columns {
-  margin: 60px auto 40px auto;
+  margin: 0px auto 0px auto;
   min-height: 250px;
-  width: 90%;
+  min-width: 90%;
   flex-basis: 711px;
   display: flex;
   flex-direction: row;
@@ -358,7 +349,7 @@
 }
 
 .footer__author {
-  margin: auto 0px 0px 0px;
+  margin: auto 0px 18px 0px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -395,19 +386,15 @@
   margin-right: 0px;
 }
 
-.social-block {
-  margin: auto 0 auto 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
 .footer__social-icon {
   height: 16px;
   width: 16px;
   margin-right: 10px;
+  margin top: 10px;
 }
 
-.footer__column-links:link, .footer__column-links:visited {
+.footer__link, .footer__link:visited {
+  text-decoration: none;
+  list-style-type: none;
   color: white;
 }
