--- a/styles/style.css
+++ b/styles/style.css
@@ -32,23 +32,23 @@
 }
 
 .header__title {
-  margin-left: 64px;
-  max-width: 730px;
   z-index: 2;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
+  max-width: 730px;
+  margin-left: 64px;
 }
 
 .header__subtitle {
-  max-width: 388px;
-  margin-left: 64px;
-  position: absolute;
-  bottom: 30px;
   z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  max-width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
 }
 
 .header__link {
@@ -60,17 +60,16 @@
   position: absolute;
   right: 0px;
   bottom: 0px;
-  min-width: 765px;
-  height: 608px;
-  z-index: 2;
-  background-size: contain;
+  max-width: 765px;
+  max-height: 608px;
+  z-index: 1;
 }
 
 .header__square-pic {
-  height: 568px;
+  min-height: 568px;
   min-width: 568px;
   background-color: #2f80ed;
-  z-index: 1;
+  z-index: 0;
   position: absolute;
   top: 64px;
   right: 0px;
@@ -118,12 +117,12 @@
 }
 
 .two-columns__paragraph {
-  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 30px;
 }
 
-.two-columns__paragraph:nth-child(2) {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.two-columns__paragraph:last-child {
+  margin-bottom: 0px;
 }
 
 .two-columns__span-accent {
@@ -195,13 +194,8 @@
   text-align: left;
   width: 100%;
   max-width: 250px;
-  margin: 0px 0px 0px 0px;
+  margin: 20px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
-}
-
-.table__text:nth-child(2) {
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 /*block-4--------------------------------------------------------------------------*/
@@ -218,7 +212,7 @@
 
 .feynman__title {
   margin: 0px auto 70px auto;
-  width: 775px;
+  max-width: 775px;
   text-align: center;
   z-index: 1;
   line-height: 1.15;
@@ -322,13 +316,13 @@
   width: 100%;
   padding: 60px 0px 40px 0px;
   display: flex;
+  box-sizing: border-box;
 }
 
 .footer__columns {
   margin: 0px auto 0px auto;
   min-height: 250px;
   min-width: 90%;
-  flex-basis: 711px;
   display: flex;
   flex-direction: row;
 }
@@ -338,7 +332,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  width: 50%;
+  flex-basis: 711px;
   justify-content: space-between;
 }
 
@@ -362,7 +356,6 @@
 }
 
 .footer__column-heading {
-  margin-bottom: 20px;
   line-height: 45px;
   font-size: 18px;
   font-weight: bold;
