--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -9,4 +9,13 @@
     font-weight: normal;
     text-decoration: none;
     color: #2f80ed;
-  }
+    opacity: 1;
+    transition-property: opacity;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+
+.feynman__link:hover {
+  opacity: .5;
+} 
