--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,3 +4,15 @@
     color: white;
   }
   
+.footer__link {
+  opacity: 1;
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+}
+
+.footer__link:hover {
+  opacity: .5;
+} 
+  
