--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,13 @@
 .header__link {
     text-decoration: none;
     color: #2f80ed;
-  }
+    opacity: 1;
+    transition-property: opacity;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+
+.header__link:hover {
+  opacity: .5;
+} 
