project 2 ready for submission -2

--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -1,7 +1,6 @@
 .footer__social-icon {
-    height: 16px;
-    width: 16px;
-    margin-right: 10px;
-    margin top: 10px;
-  }
-  
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
