--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -2,5 +2,7 @@
   width: 160px;
   height: 160px;
   margin: 60px 40px 0px 40px;
-
+  box-sizing: border-box;
+  border: 2px solid white;
+  border-radius: 50%;
 }
