--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -9,10 +9,9 @@
 @import url(./__author/khan__author.css);
 
 .khan {
-    margin-top: 105px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f2f2f2;
-    
-  }
+  padding-top: 105px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f2f2; 
+}
