project two revisions

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -9,6 +9,6 @@
     max-width: 920px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
