--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -4,7 +4,6 @@
     font-weight: normal;
     text-align: center;
     width: 100%;
-    max-width: 240px;
-    margin: 16px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+    margin: 16px 0;
+    padding: 0;
   }
