--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,15 +1,9 @@
 .cards__item {
-    display: flex;
-    flex-direction: column;
     max-width: 240px;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 100px 0px 0px;
+    padding: 0;
+    margin: 0 100px 0 0;
   }
 
-  .cards__item:nth-of-type(3) {
-    margin-right: 0px;
-  }
-
-  .cards__item:last-of-type {
-    margin-right: 340px;
+.cards__item:nth-of-type(3n) {
+    margin-right: 0;
   }
