--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -3,7 +3,7 @@
   font-size: 24px;
   font-weight: bold;
   text-align: center;
-  margin: 43px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
+  margin: 43px 0;
+  padding: 0;
   width: 240px;
 }  
