--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,6 +1,6 @@
 .footer__author {
-    margin: auto 0px 18px 0px;
-    line-height: 25px;
-    font-size: 18px;
-    font-weight: normal;
-  }
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
