--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,11 +1,6 @@
-@import url(./_content/footer__column_content_copyright.css);
-@import url(./_content/footer__column_content_info.css);
-@import url(./_content/footer__column_content_social.css);
-
 .footer__columns {
-    margin: 0px auto 0px auto;
-    min-height: 250px;
-    min-width: 90%;
-    display: flex;
-    flex-direction: row;
-  }
+  margin: 0 auto;
+  min-width: 90%;
+  display: flex;
+  flex-direction: row;
+}
