--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,6 +10,7 @@
   transition-duration: 1s;
   transition-timing-function: ease;
   transition-delay: 0s;
+  text-decoration: none;
 }
 
 .footer__link:hover {
