--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,14 +4,13 @@
 @import url(./__column-links/footer__column-links.css);
 @import url(./__link/footer__link.css);
 @import url(./__social-icon/footer__social-icon.css);
+@import url(./__column/footer__column.css);
 
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
   color: white;
-  width: 100%;
   padding: 60px 0px 40px 0px;
   display: flex;
   box-sizing: border-box;
 }
-  
