--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -6,5 +6,6 @@
     right: -210px;
     z-index: 1;
     background-image: url(../../../images/kaufman-triangle.svg);
+    background-size: contain;
   }
   
