--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,8 +1,7 @@
 @import url(./__triangle/kaufman__triangle.css);
 
 .kaufman {
-    padding: 90px 0px 90px 0px;
-    padding-bottom: 90px;
+    padding: 90px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
