--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,7 +1,7 @@
 .khan__book-container {
   display: flex;
   flex-direction: row;
-  align-content: flex-start;
+  align-items: flex-start;
   margin-top: 68px;
   height: 608px;
   width: 100%;
