--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,11 +1,7 @@
 .root {
     min-width: 1100px;
     max-width: 1600px;
-    margin: 0px auto 0px auto;
+    margin: 0 auto;
     font-family: 'Helvetica Neue', Arial, sans-serif;
-    padding: 0px;
-  }
-
-  .content {
-    margin-top: 100px;
+    padding: 0;
   }
