project 2 ready for submission -5

--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -4,7 +4,7 @@
     font-weight: normal;
     text-align: left;
     padding: 0;
-    margin: auto 0px auto 0px;
+    margin: auto 0;
     list-style-type: none;
     color: white;
   }
