--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,11 +4,12 @@
 @import url(./__title/cards__title.css);
 
   .cards {
-    margin: 0 auto 0 auto;
-    padding: 0px;
+    margin: 0 auto;
+    padding: 0;
     max-width: 920px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-start;
+    list-style-type: none;
   }
