--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -3,5 +3,6 @@
   flex-direction: row;
   width: 1100px;
   margin: 80px auto 217px auto;
-  padding: 0px;
+  padding: 0;
+  list-style-type: none;
 }
