--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,6 +1,15 @@
 .resources__logo {
   height: 38px;
   width: 270px;
-  margin: 0px 0px 0px 0px;
-
+  margin: 0;
+  opacity: 1;
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+  text-decoration: none;
 }
+
+.resources__logo:hover {
+  opacity: .5;
+} 
