--- a/blocks/table/__cell/table__cell.css
+++ b/blocks/table/__cell/table__cell.css
@@ -4,6 +4,6 @@
     display: flex;
     flex-direction: column;
     max-width: 250px;
-    padding: 0px 0px 0px 0px;
-    margin: 60px 0px 0px 0px;
+    padding: 0;
+    margin: 60px 0;
   }
