--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,7 +1,8 @@
 .video__iframes {
-    margin: 50px auto 0px auto;
-    padding: 0px;
+    margin: 50px auto 0 auto;
+    padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    list-style-type: none;
   }
