--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,9 +1,8 @@
 @import url(./__iframe/video__iframe.css);
 @import url(./__iframes/video__iframes.css);
+@import url(./__line-item/video__line-item.css);
 
 .video {
     margin-top: 100px;
     margin-bottom: -60px;
-    flex-direction: column;
-    align-items: center;
 }
